# url_shortener_simple

api/: .gitignore  README.MD  pyproject.toml
api/config/: settings.py  urls.py
api/url_shortener/: models.py  serializers.py  urls.py  viewsets.py
api/url_shortener/migrations/: 0001_initial.py
